<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.5</version>
		<relativePath/>
	</parent>

	<groupId>com.jcondotta</groupId>
	<artifactId>account-recipients-system</artifactId>
	<version>1.0.0</version>

    <packaging>pom</packaging>
    <name>account-recipients-system</name>

    <modules>
		<module>account-recipients-domain-service</module>
		<module>account-recipients-application-service</module>
		<module>account-recipients-service</module>
	</modules>

	<properties>
		<java.version>21</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<lombok.version>1.18.38</lombok.version>
		<mapstruct.version>1.6.3</mapstruct.version>

		<software.amazon.awssdk.version>2.33.4</software.amazon.awssdk.version>
		<spring-cloud-aws.version>3.4.0</spring-cloud-aws.version>
		<spring-cloud-dependencies.version>2024.0.1</spring-cloud-dependencies.version>
		<commons-validator.version>1.7</commons-validator.version>

		<maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
		<maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.jcondotta</groupId>
				<artifactId>account-recipients-domain-service</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.jcondotta</groupId>
				<artifactId>account-recipients-application-service</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>software.amazon.awssdk</groupId>
				<artifactId>bom</artifactId>
				<version>${software.amazon.awssdk.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud-dependencies.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>io.awspring.cloud</groupId>
				<artifactId>spring-cloud-aws</artifactId>
				<version>${spring-cloud-aws.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>org.mapstruct</groupId>
				<artifactId>mapstruct</artifactId>
				<version>${mapstruct.version}</version>
			</dependency>

			<dependency>
				<groupId>commons-validator</groupId>
				<artifactId>commons-validator</artifactId>
				<version>${commons-validator.version}</version>
<!--				<exclusions>-->
<!--					<exclusion>-->
<!--						<groupId>commons-logging</groupId>-->
<!--						<artifactId>commons-logging</artifactId>-->
<!--					</exclusion>-->
<!--					<exclusion>-->
<!--						<groupId>commons-beanutils</groupId>-->
<!--						<artifactId>commons-beanutils</artifactId>-->
<!--					</exclusion>-->
<!--					<exclusion>-->
<!--						<groupId>commons-digester</groupId>-->
<!--						<artifactId>commons-digester</artifactId>-->
<!--					</exclusion>-->
<!--				</exclusions>-->
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire-plugin.version}</version>
					<configuration>
						<argLine>
							--add-opens java.base/java.lang=ALL-UNNAMED
							-javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar
						</argLine>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler-plugin.version}</version>
					<configuration>
						<release>${java.version}</release>
						<annotationProcessorPaths>
							<path>
								<groupId>org.mapstruct</groupId>
								<artifactId>mapstruct-processor</artifactId>
								<version>${mapstruct.version}</version>
							</path>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
								<version>${lombok.version}</version>
							</path>
						</annotationProcessorPaths>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

</project>
